<resources>
    <string name="app_name">WINTEC Договор</string>
    <string name="ic_pin">&#xf0c6;</string>
    <string name="ic_pen">&#xf5ac;</string>
    <string name="ic_hands">&#xf2b5;</string>
    <string name="ic_times">&#xf00d;</string>
    <string name="ic_user">&#xf007;</string>
    <string name="ic_phone">&#xf095;</string>
    <string name="ic_adress">&#xf3c5;</string>
    <string name="ic_date">&#xf073;</string>
    <string name="ic_tools">&#xf5ae;</string>
    <string name="ic_plus_circle">&#xf055;</string>
    <string name="ic_lock_close">&#xf023;</string>
    <string name="ic_lock_open">&#xf09c;</string>
    <string name="ic_eye">&#xf06e;</string>
    <string name="ic_down_caret">&#xf0d7;</string>
    <string name="ic_down_arrow">&#xf107;</string>
    <string name="ic_left_arrow">&#xf053;</string>
    <string name="ic_check">&#xf543;</string>
    <string name="ic_share">&#xf1e0;</string>
    <string name="ic_print">&#xf02f;</string>
    <string name="ic_edit">&#xf303;</string>
    <string name="ic_delete">&#xf1f8;</string>
    <string name="ic_key">&#xf084;</string>
    <string name="ic_file_pdf">&#xf1c1;</string>
    <string name="ic_tick">&#xf00c;</string>
    <string name="ic_sync">&#xf2f1;</string>
    <string name="ic_email">&#xf0e0;</string>
    <string name="ic_exit">&#xf2f5;</string>
    <string name="ic_case">&#xf0b1;</string>
    <string name="ic_users">&#xf0c0;</string>
    <string name="ic_floppy">&#xf0c7;</string>
    <string name="ic_vaucher">&#xf15c;</string>
    <string name="ic_zoom_plus">&#xf00e;</string>
    <string name="ic_zoom_minus">&#xf010;</string>
    <string name="ic_location">&#xf124;</string>
    <string name="ic_search">&#xf002;</string>
    <string name="ic_sort">&#xf160;</string>
    <string name="ic_user_tie">&#xf508;</string>
    <string name="ic_user_tick">&#xf4fc;</string>
    <string name="ic_block">&#xf05e;</string>
    <string name="ic_user_plus">&#xf234;</string>
    <string name="ic_phone_device">&#xf3cd;</string>
    <string name="ic_plus">&#xf067;</string>
    <string name="ic_minus">&#xf068;</string>
    <string name="ic_carret_down">&#xf0d7;</string>

    <string name="pre_show_header"><b>ООО «Лаборатория Уюта»</b>, именуемое в дальнейшем <b>«Исполнитель»</b>, в лице <b>Рыбакиной Ларисы Витальевны</b>,
        действующей на основании Устава, с одной стороны, и <b>«Заказчик»</b> (Данные заказчика указываются внизу страницы), с
другой стороны, заключили настоящий договор о нижеследующем:</string>
    <string name="garanty">20. Гарантия на установку и качество изделия при правильной его эксплуатации и монтаже составляет <b>12</b> месяцев.</string>
    <string name="wintec_info"><b>«Исполнитель»</b>\n<b>ООО «Лаборатория Уюта»</b>\nАдрес: 443095, Самара, ул.Г.Димитрова, д.7\nИНН 6312154991\nКПП 631201001\nОКПО 43863361\nОГРН 1156313064588\nПриволжский филиал ПАО «Промсвязьбанк»\nБИК 042202803\nР/С 40702810603000015194\nК/С 30101810700000000803\n\nГенеральный директор</string>
    <string name="wintec_sites">WINTEC.RU | WINKARNIZ.RU | PERGOTENTA.RU\nWINPLISSE.RU\nМОСКВА | САНКТ-ПЕТЕРБУРГ | САМАРА | СОЧИ\n+7.495.369.11.29\nE-MAIL: INFO@WINTEC.RU</string>
</resources>
