<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TVSemi.L"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/gray5"
            android:paddingLeft="42dp"
            android:paddingRight="42dp"
            android:text="Меню администратора" />

        <TextView
            android:id="@+id/tv_profile"

            style="@style/IconTv.L"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="6dp"
            android:text="@string/ic_user" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/la_my_docs"

            android:layout_width="304dp"
            android:layout_height="42dp"
            android:layout_below="@id/la_center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/el_grad_teal_rounded">


            <TextView
                style="@style/TVBold.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Мои договора" />

            <TextView
                style="@style/IconTv.S"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:text="@string/ic_hands" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/la_all_docs"

            android:layout_width="304dp"
            android:layout_height="42dp"
            android:layout_below="@id/la_center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_grad_blue_rounded">


            <TextView
                style="@style/TVBold.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Все договора" />

            <TextView
                style="@style/IconTv.S"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:text="@string/ic_users" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/la_location"

            android:layout_width="304dp"
            android:layout_height="42dp"
            android:layout_below="@id/la_center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/el_grad_blue_rounded">


            <TextView
                style="@style/TVBold.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Геолокация" />

            <TextView
                style="@style/IconTv.S"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:text="@string/ic_location" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/la_access"

            android:layout_width="304dp"
            android:layout_height="42dp"
            android:layout_below="@id/la_center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/el_grad_purple_rounded">


            <TextView
                style="@style/TVBold.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Управление доступом" />

            <TextView
                style="@style/IconTv.S"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:text="@string/ic_lock_open" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/la_new_dogovor"

            android:layout_width="304dp"
            android:layout_height="42dp"
            android:layout_below="@id/la_center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_grad_orange_rounded">


            <TextView
                style="@style/TVBold.M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="Новый договор" />

            <TextView
                style="@style/IconTv.S"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:text="@string/ic_pen" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>